--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+.idea/
+build.gradle
+gradle/
+gradlew
+gradlew.bat
+out/production/classes/generated/
+settings.gradle
+src/
